--- a/ckanext/edawax/assets/custom.css
+++ b/ckanext/edawax/assets/custom.css
@@ -28,9 +28,8 @@ body {
   background-color: #eeeeee;
 
   background-repeat: no-repeat;
-    background-attachment: fixed;
-  background-image: linear-gradient(#95abc400 0%,#dde4ec9e 10%,rgb(0, 93, 150, 1) 100%), url('/background_temp.jpg') !important;
-    background-size: 100% auto;
+  background-attachment: fixed;
+  background-size: 100% auto;
 }
 
 a {
